chore - Migrate the layout system to use the layout handler
